# budget_claude

./: .dockerignore  .gitignore  BATCH_PROMPT_CHANGES.md  CLAUDE.md  LANGFUSE_INTEGRATION.md  README.md  SETUP.md  docker-compose.yml  file_mappings.json  mapping_progress.json  pyproject.toml  sample_transactions.csv  start.sh  test_batch_prompt.py  test_incomplete_rows.csv
backend/: Dockerfile  app.py  categories.json  langfuse_tracer.py
frontend/: Dockerfile  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  config.js
frontend/src/components/: Analytics.css  Analytics.js  FileUpload.css  FileUpload.js  MappingInterface.css  MappingInterface.js  ReviewScreen.css  ReviewScreen.js  Stats.css  Stats.js
