[tool.poetry]
name = "budget-app"
version = "0.1.0"
description = "Budget planning app with Claude Code"
authors = ["Brian McKean <brianmckean@example.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.0"
Flask-CORS = "^4.0.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
